--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -12,6 +12,18 @@
           id="fullname"
           formControlName="fullname"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('fullname')?.errors?.['required'] && formPatientRegister.get('fullname')?.touched"
+        >
+          <p>Por favor insira seu nome completo!</p>
+        </div>
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('fullname')?.errors?.['minlength'] && formPatientRegister.get('fullname')?.touched"
+        >
+          <p>Seu nome deve possuir no mínimo 8 caracteres!</p>
+        </div>
       </div>
       <div class="input-wrapper w-2/12">
         <label for="genre">Gênero</label>
@@ -26,6 +38,12 @@
           <option value="transgender">Transgênero</option>
           <option value="nonbinary">Não-binário</option>
         </select>
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('genre')?.errors?.['required'] && formPatientRegister.get('genre')?.touched"
+        >
+          <p>Por favor insira seu genero!</p>
+        </div>
       </div>
       <div class="input-wrapper w-2/12">
         <label for="birthdate">Data de nascimento</label>
@@ -38,6 +56,12 @@
           placeholder="dd/mm/aaaa"
           mask="d0/M0/0000"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('birthdate')?.errors?.['required'] && formPatientRegister.get('birthdate')?.touched"
+        >
+          <p>Por favor insira sua data de nascimento!</p>
+        </div>
       </div>
       <div class="input-wrapper mr-5 w-2/12">
         <label for="cpf">CPF</label>
@@ -50,6 +74,12 @@
           placeholder="000.000.000-00"
           mask="000.000.000-00"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('cpf')?.errors?.['required'] && formPatientRegister.get('cpf')?.touched"
+        >
+          <p>Por favor insira seu CPF!</p>
+        </div>
       </div>
     </div>
 
@@ -63,6 +93,12 @@
           id="rg"
           formControlName="rg"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('rg')?.errors?.['required'] && formPatientRegister.get('rg')?.touched"
+        >
+          <p>Por favor insira seu RG!</p>
+        </div>
       </div>
       <div class="input-wrapper w-3/12">
         <label for="civilStatus">Estado civil</label>
@@ -80,6 +116,12 @@
           <option value="divorced">Divorciado(a)</option>
           <option value="widower">Viúvo(a)</option>
         </select>
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('civilStatus')?.errors?.['required'] && formPatientRegister.get('civilStatus')?.touched"
+        >
+          <p>Por favor insira seu estado civil!</p>
+        </div>
       </div>
       <div class="input-wrapper w-3/12">
         <label for="placeOfBirth">Naturalidade</label>
@@ -90,6 +132,18 @@
           id="placeOfBirth"
           formControlName="placeOfBirth"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('placeOfBirth')?.errors?.['required'] && formPatientRegister.get('placeOfBirth')?.touched"
+        >
+          <p>Por favor insira sua naturalidade!</p>
+        </div>
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('placeOfBirth')?.errors?.['minlength'] && formPatientRegister.get('placeOfBirth')?.touched"
+        >
+          <p>Sua naturalidade deve possuir no mínimo 8 caracteres!</p>
+        </div>
       </div>
       <div class="input-wrapper mr-5 w-3/12">
         <label for="email">E-mail</label>
@@ -101,6 +155,18 @@
           formControlName="email"
           placeholder="example@gmail.com"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('email')?.errors?.['required'] && formPatientRegister.get('email')?.touched"
+        >
+          <p>Por favor insira seu e-mail!</p>
+        </div>
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('email')?.errors?.['email'] && formPatientRegister.get('email')?.touched"
+        >
+          <p>Por favor insira um e-mail válido!</p>
+        </div>
       </div>
     </div>
 
@@ -116,6 +182,12 @@
           placeholder="(99) 9 9999-9999"
           mask="(00) 0 0000-0000"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('phone')?.errors?.['required'] && formPatientRegister.get('phone')?.touched"
+        >
+          <p>Por favor insira seu telefone!</p>
+        </div>
       </div>
       <div class="input-wrapper w-3/12">
         <label for="emergencyContact">Contato de Emergência</label>
@@ -128,6 +200,12 @@
           placeholder="(99) 9 9999-9999"
           mask="(00) 0 0000-0000"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('emergencyContact')?.errors?.['required'] && formPatientRegister.get('emergencyContact')?.touched"
+        >
+          <p>Por favor insira seu contato de emergência!</p>
+        </div>
       </div>
       <div class="input-wrapper w-3/12">
         <label for="allergyList">Lista de Alergias</label>
@@ -196,6 +274,12 @@
           id="publicPlace"
           formControlName="publicPlace"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('publicPlace')?.errors?.['required'] && formPatientRegister.get('publicPlace')?.touched"
+        >
+          <p>Por favor insira seu logradouro!</p>
+        </div>
       </div>
       <div class="input-wrapper w-2/12">
         <label for="number">Numero</label>
@@ -206,6 +290,12 @@
           id="number"
           formControlName="number"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('number')?.errors?.['required'] && formPatientRegister.get('number')?.touched"
+        >
+          <p>Por favor insira o número da sua residência!</p>
+        </div>
       </div>
       <div class="input-wrapper w-2/12">
         <label for="neighborhood">Bairro</label>
@@ -216,6 +306,12 @@
           id="neighborhood"
           formControlName="neighborhood"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('neighborhood')?.errors?.['required'] && formPatientRegister.get('neighborhood')?.touched"
+        >
+          <p>Por favor insira seu bairro!</p>
+        </div>
       </div>
       <div class="input-wrapper mr-5 w-2/12">
         <label for="city">Cidade</label>
@@ -226,6 +322,12 @@
           id="city"
           formControlName="city"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('city')?.errors?.['required'] && formPatientRegister.get('city')?.touched"
+        >
+          <p>Por favor insira sua cidade!</p>
+        </div>
       </div>
     </div>
 
@@ -239,6 +341,12 @@
           id="state"
           formControlName="state"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('state')?.errors?.['required'] && formPatientRegister.get('state')?.touched"
+        >
+          <p>Por favor insira seu estado!</p>
+        </div>
       </div>
       <div class="input-wrapper w-3/12">
         <label for="cep">CEP</label>
@@ -248,7 +356,14 @@
           name="cep"
           id="cep"
           formControlName="cep"
+          (blur)="checkCep()"
         />
+        <div
+          class="text-red-500 font-semibold"
+          *ngIf="formPatientRegister.get('cep')?.errors?.['required'] && formPatientRegister.get('cep')?.touched"
+        >
+          <p>Por favor insira seu cep!</p>
+        </div>
       </div>
       <div class="input-wrapper w-3/12">
         <label for="complement">Complemento</label>
