--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,24 +7,19 @@
     <div>
       <!-- Dropdown -->
       <div class="relative ml-3 group inline-block text-left">
-        <button type="button" class="bg-white-800 text-black-800 text-sm font-regular py-2 px-4 rounded inline-flex items-center" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+        <button type="button" class="flex w-full outline-none focus:outline-none py-2 rounded-md font-medium text-black hover:bg-blue-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
           <!-- Ícone do usuário -->
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10 mr-2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
           </svg>        
           <!-- Nome de usuário -->
-          <p class="me-3 mb-auto mt-auto align-self-center">João Silva joaosilva@email.com</p>
+          <p class="me-3 mb-auto mt-auto align-self-center">{{ user.name }}</p>
+          <p class="me-3 mb-auto mt-auto align-self-center">{{ user.email }}</p>
         </button>
     
     
         <!-- Conteudo do dropdown -->
-        <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden group-hover:block text-black text-sm z-10" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-          
-            <!-- Opções do dropdown, como sair, perfil, etc. -->
-            <a href="#" class="block px-4 py-2 text-sm text-gray-800" role="menuitem" tabindex="-1" id="user-menu-item-0">Perfil</a>
-            <a href="#" class="block px-4 py-2 text-sm text-gray-800" role="menuitem" tabindex="-1" id="user-menu-item-0">Sair</a>
-          
-        </div>
+        <app-dropdown></app-dropdown>
     
       </div>
     </div>
