feat(exercise): update layout component & app-routing

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,6 +3,7 @@
   <div class="flex-1 py-4 pr-4">
     <div class="w-full h-full rounded-xl bg-slate-50">
       <!-- children -->
+      <app-exercise></app-exercise>
     </div>
   </div>
 </div>
