--- a/src/app/exercise/exercise.component.html
+++ b/src/app/exercise/exercise.component.html
@@ -1,1 +1,80 @@
-<p>exercise works!</p>
+<div class="text-slate-800 container m-auto py-4 pl-14 pr-2">
+    <form>
+      <h3 class="text-xl font-bold my-2">Cadastro de exercício</h3>
+  
+      <div class="md:flex gap-2">
+        <div class="input-wrapper w-10/12">
+          <label for="name">Nome do Série de Exercícios</label>
+          <input
+            type="text"
+            class="input-field"
+            name="name"
+            id="name"
+            formControlName=""
+          />
+        </div>
+      </div>
+  
+      <div class="md:flex gap-2">
+          <div class="input-wrapper w-6/12">
+            <label for="date">Data</label>
+            <input
+              type="date"
+              class="input-field"
+              name="date"
+              id="date"
+              formControlName=""
+            />
+          </div>
+          <div class="input-wrapper w-6/12">
+            <label for="time">Horário</label>
+            <input
+              type="time"
+              class="input-field"
+              name="time"
+              id="time"
+              formControlName=""
+            />
+          </div>
+      </div>
+  
+      <div class="md:flex gap-2">
+        <div class="input-wrapper w-6/12">
+          <label for="type">Tipo</label>
+          <select class="input-field" name="type" id="type" formControlName="">
+            <option disabled selected></option>
+            <option value="aerobics">Resistência Aeróbica</option>
+            <option value="muscular">Resistência Muscular</option>
+            <option value="flexibility">Flexibilidade</option>
+            <option value="strength">Força</option>
+            <option value="agility">Agilidade</option>
+            <option value="other">Outro</option>
+          </select>
+        </div>
+        <div class="input-wrapper w-6/12">
+          <label for="weeklyAmount">Quantidade por Semana</label>
+          <input
+            type="number"
+            class="input-field"
+            name="weeklyAmount"
+            id="weeklyAmount"
+            formControlName=""
+          />
+        </div>
+      </div>
+  
+      <div class="md:flex gap-2">
+        <div class="input-wrapper mr-5 w-full">
+          <label for="description">Descrição</label>
+          <textarea
+            class="input-field"
+            name="description"
+            id="description"
+            rows="5"
+            formControlName=""
+          ></textarea>
+        </div>
+      </div>
+
+    </form>
+  </div>
