--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -39,6 +39,7 @@
           id="dietDate"
           formControlName=""
           placeholder="dd/mm/aaaa"
+          mask="d0/M0/0000"
         />
       </div>
 
@@ -51,6 +52,7 @@
           id="dietTime"
           formControlName=""
           placeholder="hh:mm:ss"
+          mask="Hh:m0:s0"
         />
       </div>
     </div>
