--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -1,5 +1,5 @@
 <div class="text-slate-800 container m-auto py-4 pl-14 pr-2">
-  <form>
+  <form [formGroup]="formsDietRegister">
     <h3 class="text-xl font-bold my-2">Cadastro de dietas</h3>
 
     <div class="md:flex gap-2">
@@ -10,13 +10,18 @@
           class="input-field"
           name="dietName"
           id="dietName"
-          formControlName=""
+          formControlName="dietName"
         />
       </div>
 
       <div class="input-wrapper mr-5 w-6/12">
         <label for="type">Tipo da dieta</label>
-        <select class="input-field" name="type" id="type" formControlName="">
+        <select
+          class="input-field"
+          name="type"
+          id="type"
+          formControlName="type"
+        >
           <option disabled selected></option>
           <option value="low_carb">Low Carb</option>
           <option value="dash">Dash</option>
@@ -37,7 +42,7 @@
           class="input-field"
           name="dietDate"
           id="dietDate"
-          formControlName=""
+          formControlName="dietDate"
           placeholder="dd/mm/aaaa"
           mask="d0/M0/0000"
         />
@@ -50,7 +55,7 @@
           class="input-field"
           name="dietTime"
           id="dietTime"
-          formControlName=""
+          formControlName="dietTime"
           placeholder="hh:mm:ss"
           mask="Hh:m0:s0"
         />
@@ -65,7 +70,7 @@
           name="description"
           id="description"
           rows="5"
-          formControlName=""
+          formControlName="description"
         ></textarea>
       </div>
     </div>
