feat(sidebar): add links

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,6 +12,7 @@
           [selected]="option.selected"
           [collapsed]="collapsed"
           (click)="select(idx)"
+          [routerLink]="option.link"
         />
       </li>
     </ul>
