--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,4 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import "./app/shared/components/generic-modal/generic-modal.component.css";
