--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-[calc(100%-64px)] bg-slate-50 text-slate-800">
-  <div class="flex flex-col h-full w-10/12 p-4">
+  <div class="flex flex-col w-10/12 h-full p-4">
     <div class="flex justify-between pb-2 border-b">
       <div class="flex gap-6 pl-4">
         <app-tab-menu
@@ -13,8 +13,8 @@
       <app-delay-search-input (inputEmitter)="onSearchInput($event)" />
     </div>
     <div class="flex-grow overflow-y-auto">
-      <div class="p-4 flex flex-col gap-2">
-        <div class="self-end p-2 flex gap-2 text-slate-400 rounded-md">
+      <div class="flex flex-col gap-2 p-4">
+        <div class="flex self-end gap-2 p-2 rounded-md text-slate-400">
           <button (click)="listStyle = 'GRID'">
             <ng-icon name="ionGrid" />
           </button>
@@ -32,7 +32,7 @@
   <div class="flex flex-col w-2/12 gap-4 p-4 pl-0 overflow-y-auto">
     <app-stats-card
       *ngFor="let stat of stats"
-      [label]="stat.label"
+      [label]="stat.title"
       [value]="stat.value"
     />
   </div>
