--- a/src/app/pages/medical-records/medical-records.component.html
+++ b/src/app/pages/medical-records/medical-records.component.html
@@ -1,49 +1,39 @@
 <div class="flex h-[calc(100%-64px)] text-slate-800">
   <div class="flex-grow p-4 overflow-y-auto">
     <app-delay-search-input (inputEmitter)="({})" />
-    <div class="grid grid-cols-4 gap-3 py-3">
-      <div
-        *ngFor="let item of test"
-        class="flex flex-col gap-2 p-4 border rounded-md shadow-md border-x-slate-300 text-slate-600"
+    <div class="flex flex-wrap gap-3 pt-3">
+      <app-accordion
+        *ngFor="let item of test; index as i"
+        [headerTitle]="'' + i"
+        [headerIcon]="'ionClipboard'"
+        class="w-[calc(25%-9px)]"
       >
-        <header class="flex items-center justify-between">
-          <div class="flex items-center gap-2">
-            <ng-icon name="ionClipboard" class="text-3xl" />
-            <span>João Silva</span>
-          </div>
-          <button (click)="open = !open">
-            <ng-icon [name]="open ? 'ionChevronUp' : 'ionChevronDown'" />
-          </button>
-        </header>
-        <div *ngIf="open" class="flex flex-col gap-3 text-sm">
-          <hr />
-          <div class="flex justify-between">
-            <p>(99) 9 9999-9999</p>
-            <p>Convênio</p>
-          </div>
-          <div class="flex justify-between">
-            <div class="flex flex-col items-center text-base">
-              <ng-icon name="ionCalendarClear" class="text-2xl" />
-              <p>2</p>
-            </div>
-            <div class="flex flex-col items-center text-base">
-              <ng-icon name="ionDocuments" class="text-2xl" />
-              <p>3</p>
-            </div>
-            <div class="flex flex-col items-center text-base">
-              <ng-icon name="ionBarbell" class="text-2xl" />
-              <p>5</p>
-            </div>
-            <div class="flex flex-col items-center text-base">
-              <ng-icon name="ionFastFood" class="text-2xl" />
-              <p>1</p>
-            </div>
-          </div>
-          <button class="p-2 rounded-md bg-slate-600 text-slate-50">
-            Ver detalhes
-          </button>
+        <div class="flex justify-between">
+          <p>(99) 9 9999-9999</p>
+          <p>Convênio</p>
         </div>
-      </div>
+        <div class="flex justify-between">
+          <div class="flex flex-col items-center text-base">
+            <ng-icon name="ionCalendarClear" class="text-2xl" />
+            <p>2</p>
+          </div>
+          <div class="flex flex-col items-center text-base">
+            <ng-icon name="ionDocuments" class="text-2xl" />
+            <p>3</p>
+          </div>
+          <div class="flex flex-col items-center text-base">
+            <ng-icon name="ionBarbell" class="text-2xl" />
+            <p>5</p>
+          </div>
+          <div class="flex flex-col items-center text-base">
+            <ng-icon name="ionFastFood" class="text-2xl" />
+            <p>1</p>
+          </div>
+        </div>
+        <button class="p-2 rounded-md bg-slate-600 text-slate-50">
+          Ver detalhes
+        </button>
+      </app-accordion>
     </div>
   </div>
 </div>
