--- a/src/app/components/medical-records/medical-records-card/medical-records-card.component.html
+++ b/src/app/components/medical-records/medical-records-card/medical-records-card.component.html
@@ -6,19 +6,19 @@
   <div class="flex justify-between">
     <div class="flex flex-col items-center text-base">
       <ng-icon name="ionCalendarClear" class="text-2xl" />
-      <p>2</p>
+      <p>{{ medicalRecordsStats.queries }}</p>
     </div>
     <div class="flex flex-col items-center text-base">
       <ng-icon name="ionDocuments" class="text-2xl" />
-      <p>3</p>
+      <p>{{ medicalRecordsStats.exams }}</p>
     </div>
     <div class="flex flex-col items-center text-base">
       <ng-icon name="ionBarbell" class="text-2xl" />
-      <p>5</p>
+      <p>{{ medicalRecordsStats.exercises }}</p>
     </div>
     <div class="flex flex-col items-center text-base">
       <ng-icon name="ionFastFood" class="text-2xl" />
-      <p>1</p>
+      <p>{{ medicalRecordsStats.diets }}</p>
     </div>
   </div>
   <button class="p-2 rounded-md bg-slate-600 text-slate-50">
