--- a/src/app/pages/medical-records/medical-records.component.html
+++ b/src/app/pages/medical-records/medical-records.component.html
@@ -5,6 +5,12 @@
       <app-medical-records-card
         *ngFor="let medicalRecord of medicalRecords"
         [patient]="medicalRecord.patient"
+        [medicalRecordsStats]="{
+          diets: medicalRecord.diets.length,
+          exercises: medicalRecord.exercises.length,
+          exams: medicalRecord.exams.length,
+          queries: medicalRecord.queries.length,
+        }"
         class="w-[calc(25%-9px)]"
       />
     </div>
