--- a/src/app/components/medical-records/medical-records-card/medical-records-card.component.html
+++ b/src/app/components/medical-records/medical-records-card/medical-records-card.component.html
@@ -21,7 +21,10 @@
       <p>{{ medicalRecordsStats.diets }}</p>
     </div>
   </div>
-  <button class="p-2 rounded-md bg-slate-600 text-slate-50">
+  <button
+    class="p-2 rounded-md bg-slate-600 text-slate-50"
+    [routerLink]="['/prontuarios', patient.id]"
+  >
     Ver detalhes
   </button>
 </app-accordion>
