fix(med records): add border to accordion

--- a/src/app/components/medical-records/medical-records-card/medical-records-card.component.html
+++ b/src/app/components/medical-records/medical-records-card/medical-records-card.component.html
@@ -1,4 +1,8 @@
-<app-accordion *ngIf="patient" [headerTitle]="patient.fullName">
+<app-accordion
+  *ngIf="patient"
+  [headerTitle]="patient.fullName"
+  [bordered]="true"
+>
   <div class="flex justify-between">
     <p>{{ patient.phone }}</p>
     <p>{{ patient.healthInsurance || "Nenhum" }}</p>
