--- a/src/app/pages/patient-medical-record/patient-medical-record.component.html
+++ b/src/app/pages/patient-medical-record/patient-medical-record.component.html
@@ -31,12 +31,15 @@
         [bordered]="true"
       >
         <app-accordion *ngFor="let query of medicalRecord?.queries">
-          <p customHeader class="font-semibold">
-            {{ query.consultationDate }} {{ query.consultationTime }}
-            <span class="font-medium">
-              - {{ query.reasonForConsultation }}</span
-            >
-          </p>
+          <div customHeader class="flex gap-2">
+            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <p customHeader class="font-semibold">
+              {{ query.consultationDate }} {{ query.consultationTime }}
+              <span class="font-medium">
+                - {{ query.reasonForConsultation }}</span
+              >
+            </p>
+          </div>
           <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
             <p *ngIf="query.medicaments">
               Medicamentos:
@@ -63,10 +66,13 @@
         [bordered]="true"
       >
         <app-accordion *ngFor="let exam of medicalRecord?.exams">
-          <p customHeader class="font-semibold">
-            {{ exam.examDate }} {{ exam.examHour }}
-            <span class="font-medium"> - {{ exam.examName }}</span>
-          </p>
+          <div customHeader class="flex gap-2">
+            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <p customHeader class="font-semibold">
+              {{ exam.examDate }} {{ exam.examHour }}
+              <span class="font-medium"> - {{ exam.examName }}</span>
+            </p>
+          </div>
           <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
             <p>
               Tipo de exame:
@@ -91,10 +97,13 @@
         [bordered]="true"
       >
         <app-accordion *ngFor="let exercise of medicalRecord?.exercises">
-          <p customHeader class="font-semibold">
-            {{ exercise.date }} {{ exercise.time }}
-            <span class="font-medium"> - {{ exercise.name }}</span>
-          </p>
+          <div customHeader class="flex gap-2">
+            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <p customHeader class="font-semibold">
+              {{ exercise.date }} {{ exercise.time }}
+              <span class="font-medium"> - {{ exercise.name }}</span>
+            </p>
+          </div>
           <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
             <p>
               Tipo de exercício:
@@ -119,10 +128,13 @@
         [bordered]="true"
       >
         <app-accordion *ngFor="let diet of medicalRecord?.diets">
-          <p customHeader class="font-semibold">
-            {{ diet.dietDate }} {{ diet.dietTime }}
-            <span class="font-medium"> - {{ diet.dietName }}</span>
-          </p>
+          <div customHeader class="flex gap-2">
+            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <p customHeader class="font-semibold">
+              {{ diet.dietDate }} {{ diet.dietTime }}
+              <span class="font-medium"> - {{ diet.dietName }}</span>
+            </p>
+          </div>
           <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
             <p>
               Tipo de dieta:
