--- a/src/app/pages/patient-medical-record/patient-medical-record.component.html
+++ b/src/app/pages/patient-medical-record/patient-medical-record.component.html
@@ -32,7 +32,9 @@
       >
         <app-accordion *ngFor="let query of medicalRecord?.queries">
           <div customHeader class="flex gap-2">
-            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <button [routerLink]="['/consultas', query.id]">
+              <ng-icon name="ionCreateOutline" class="text-lg" />
+            </button>
             <p customHeader class="font-semibold">
               {{ query.consultationDate }} {{ query.consultationTime }}
               <span class="font-medium">
@@ -67,7 +69,9 @@
       >
         <app-accordion *ngFor="let exam of medicalRecord?.exams">
           <div customHeader class="flex gap-2">
-            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <button [routerLink]="['/exames', exam.id]">
+              <ng-icon name="ionCreateOutline" class="text-lg" />
+            </button>
             <p customHeader class="font-semibold">
               {{ exam.examDate }} {{ exam.examHour }}
               <span class="font-medium"> - {{ exam.examName }}</span>
@@ -83,8 +87,51 @@
               <span class="font-medium">{{ exam.laboratory }}</span>
             </p>
             <p>
+              Anexo:
+              <a [href]="exam.documentUrl" class="font-medium text-blue-500">{{
+                exam.documentUrl
+              }}</a>
+            </p>
+            <p>
               Resultados:
               <span class="font-medium">{{ exam.results }}</span>
+            </p>
+          </div>
+        </app-accordion>
+      </app-accordion>
+
+      <app-accordion
+        [headerTitle]="getMedicamentsTotal() + ' Medicamentos'"
+        headerIcon="ionBandage"
+        iconSize="lg"
+        [bordered]="true"
+      >
+        <app-accordion *ngFor="let medicament of getUniqueMedicaments()">
+          <div customHeader class="flex gap-2">
+            <button [routerLink]="['/medicamentos', medicament.id]">
+              <ng-icon name="ionCreateOutline" class="text-lg" />
+            </button>
+            <p customHeader class="font-semibold">
+              {{ medicament.date }} {{ medicament.time }}
+              <span class="font-medium"> - {{ medicament.name }}</span>
+            </p>
+          </div>
+          <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
+            <p>
+              Tipo:
+              <span class="font-medium">{{ medicament.type }}</span>
+            </p>
+            <p>
+              Quantidade:
+              <span class="font-medium">{{ medicament.quantity }}</span>
+            </p>
+            <p>
+              Unidade:
+              <span class="font-medium">{{ medicament.unit }}</span>
+            </p>
+            <p>
+              Observações:
+              <span class="font-medium">{{ medicament.observations }}</span>
             </p>
           </div>
         </app-accordion>
@@ -98,7 +145,9 @@
       >
         <app-accordion *ngFor="let exercise of medicalRecord?.exercises">
           <div customHeader class="flex gap-2">
-            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <button [routerLink]="['/exercicios', exercise.id]">
+              <ng-icon name="ionCreateOutline" class="text-lg" />
+            </button>
             <p customHeader class="font-semibold">
               {{ exercise.date }} {{ exercise.time }}
               <span class="font-medium"> - {{ exercise.name }}</span>
@@ -129,7 +178,9 @@
       >
         <app-accordion *ngFor="let diet of medicalRecord?.diets">
           <div customHeader class="flex gap-2">
-            <button><ng-icon name="ionCreateOutline" class="text-lg" /></button>
+            <button [routerLink]="['/dietas', diet.id]">
+              <ng-icon name="ionCreateOutline" class="text-lg" />
+            </button>
             <p customHeader class="font-semibold">
               {{ diet.dietDate }} {{ diet.dietTime }}
               <span class="font-medium"> - {{ diet.dietName }}</span>
