--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,45 +1,22 @@
-<!-- Toolbar -->
 <nav
-  class="flex items-center justify-between p-4 text-black rounded-md shadow-lg bg-white-800"
+  class="relative z-20 flex items-center justify-between p-4 text-slate-800 shadow-lg bg-slate-50 h-20"
 >
-  <div class="container flex items-center justify-center">
-    <!-- Título central -->
-    <h1 class="text-2xl font-bold">Dashboard</h1>
+  <div class="flex flex-grow items-center justify-center">
+    <h1 class="text-3xl font-bold">Dashboard</h1>
   </div>
-  <div>
-    <!-- Dropdown -->
-    <div class="relative inline-block ml-3 text-left group">
-      <button
-        type="button"
-        class="flex w-full py-2 font-medium text-black rounded-md outline-none focus:outline-none hover:bg-blue-800"
-        id="user-menu-button"
-        aria-expanded="false"
-        aria-haspopup="true"
-      >
-        <!-- Ícone do usuário -->
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-10 h-10 mr-2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"
-          />
-        </svg>
-        <!-- Nome de usuário -->
-        <p class="mt-auto mb-auto me-3 align-self-center">
-          {{ user.fullName }}
-        </p>
-        <p class="mt-auto mb-auto me-3 align-self-center">{{ user.email }}</p>
-      </button>
-
-      <!-- Conteudo do dropdown -->
-      <app-dropdown></app-dropdown>
+  <div
+    class="w-2/12 flex gap-2 justify-between items-center px-4 border-slate-300 border-l"
+    aria-haspopup="true"
+  >
+    <ng-icon name="ionPersonCircle" class="text-5xl text-slate-400" />
+    <div class="w-3/5 flex flex-col leading-3">
+      <p class="font-semibold truncate">
+        {{ user.fullName }}
+      </p>
+      <p class="text-xs text-slate-400 truncate">
+        {{ user.email }}
+      </p>
     </div>
+    <app-dropdown />
   </div>
 </nav>
