--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
   </section>
 
   <button
-    class="absolute right-0 flex items-center justify-center w-8 transition-colors translate-x-1/2 rounded-full bg-slate-800 aspect-square hover:bg-slate-700"
+    class="absolute z-40 right-0 top-0 translate-y-10 flex items-center justify-center w-8 transition-colors translate-x-1/2 rounded-full bg-slate-800 aspect-square hover:bg-slate-700"
     (click)="collapsed = !collapsed"
   >
     <ng-icon
